<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/selector_background_empty"
    android:minHeight="144dp"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="12dp"
        android:layout_weight="0" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left" >

            <com.garuda.hcmobile.font.RobotoTextView
                android:id="@+id/list_item_leave_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="16sp"
                android:text="@string/leave_type"
                app:typeface="robotoBold" />

            <com.garuda.hcmobile.font.MaterialDesignIconsTextView
                android:id="@+id/list_icon_reject"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:layout_weight="0"
                android:padding="4dp"
                android:hint="@string/reject"
                android:text="@string/material_icon_reject"
                android:textColor="@color/material_red_500"
                android:textSize="24dp" />
            <com.garuda.hcmobile.font.MaterialDesignIconsTextView
                android:id="@+id/list_icon_approve"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0"
                android:hint="@string/approve"
                android:text="@string/material_icon_approve"
                android:textColor="@color/material_green_500"
                android:textSize="24dp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left" >

            <com.garuda.hcmobile.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="14sp"
                android:text="@string/leave_period"
                app:typeface="robotoBlack" />

            <com.garuda.hcmobile.font.RobotoTextView
                android:id="@+id/list_item_sticky_leave_period"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="14sp"
                android:text="@string/dash_val"
                app:typeface="robotoRegular" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left" >

            <com.garuda.hcmobile.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="14sp"
                android:text="@string/leave_reason"
                app:typeface="robotoBlack" />

            <com.garuda.hcmobile.font.RobotoTextView
                android:id="@+id/list_item_sticky_leave_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="14sp"
                android:text="@string/dash_val"
                app:typeface="robotoRegular" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left" >

            <com.garuda.hcmobile.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="14sp"
                android:text="@string/leave_status"
                app:typeface="robotoBlack" />

            <com.garuda.hcmobile.font.RobotoTextView
                android:id="@+id/list_item_sticky_leave_status"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="14sp"
                android:text="@string/dash_val"
                app:typeface="robotoRegular" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="2dp"
        android:layout_weight="0">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_vertical|left" >

            <com.garuda.hcmobile.font.RobotoTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="0dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="14sp"
                android:text="@string/leave_sup_note"
                app:typeface="robotoBlack" />

            <com.garuda.hcmobile.font.RobotoTextView
                android:id="@+id/list_item_sticky_leave_sup_note"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="5dp"
                android:textColor="@color/main_color_grey_700"
                android:textSize="14sp"
                android:text="@string/dash_val"
                app:typeface="robotoRegular" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>