<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_regis"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="32dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingTop="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/register_travel_transparent_background"
        android:orientation="vertical"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:paddingTop="22dp">

        <com.garuda.hcmobile.font.RobotoTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:background="@drawable/transparent_button_selector"
            android:gravity="right"
            android:text="@string/clockinout_header"
            android:textColor="@color/abc_input_method_navigation_guard"
            android:textSize="34sp"
            app:typeface="robotoBold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.garuda.hcmobile.font.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_hotels"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="22dp" />

            <com.garuda.hcmobile.view.FloatLabeledEditText
                android:id="@+id/clockinout_place"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/clockinout_place"
                app:fletHintTextColor="@color/main_color_grey_700"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/abc_input_method_navigation_guard"></com.garuda.hcmobile.view.FloatLabeledEditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.garuda.hcmobile.font.MaterialDesignIconsTextView
                style="@style/TextViewAppearance.Title1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="0dp"
                android:text="@string/material_icon_clock"
                android:textColor="@color/abc_input_method_navigation_guard"
                android:textSize="22dp" />

            <com.garuda.hcmobile.view.FloatLabeledEditText
                android:id="@+id/clockinout_time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_weight="1"
                app:fletFloatingHint="@string/clockinout_time"
                app:fletHintTextColor="@color/main_color_grey_700"
                app:fletSingleLine="true"
                app:fletTextBackground="@drawable/edit_text_background_accent"
                app:fletTextColor="@color/abc_input_method_navigation_guard"></com.garuda.hcmobile.view.FloatLabeledEditText>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:layout_marginTop="12dp"
            android:gravity="right">

            <com.garuda.hcmobile.font.RobotoTextView
                android:id="@+id/btnClockInCheck"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/transparent_button_selector"
                android:minWidth="96dp"
                android:text="@string/clockinout_check"
                android:textColor="@color/abc_input_method_navigation_guard"
                app:typeface="robotoMedium" />

            <com.garuda.hcmobile.font.RobotoTextView
                android:id="@+id/btnClockInSubmit"
                style="@style/ButtonStyle.RaisedEmpty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="0dp"
                android:background="@drawable/transparent_button_selector"
                android:minWidth="96dp"
                android:text="@string/clockinout_submit"
                android:textColor="@color/abc_input_method_navigation_guard"
                app:typeface="robotoMedium" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>